@@ -11,7 +11,7 @@ from threading import Thread
 
 from nose.tools import assert_raises
 
-from werkzeug import Local, LocalManager
+from werkzeug import Local, LocalManager, LocalStack, LocalProxy, release_local
 
 
 def test_basic_local():
@@ -36,3 +36,56 @@ def test_basic_local():
     delfoo()
     assert_raises(AttributeError, lambda: l.foo)
     assert_raises(AttributeError, delfoo)
+
+    release_local(l)
+
+
+def test_local_release():
+    """Locals work without manager"""
+    loc = Local()
+    loc.foo = 42
+    release_local(loc)
+    assert not hasattr(loc, 'foo')
+
+    ls = LocalStack()
+    ls.push(42)
+    release_local(ls)
+    assert ls.top is None
+
+
+def test_local_stack():
+    """Test the LocalStack"""
+    ls = LocalStack()
+    assert ls.top is None
+    ls.push(42)
+    assert ls.top == 42
+    ls.push(23)
+    assert ls.top == 23
+    ls.pop()
+    assert ls.top == 42
+    ls.pop()
+    assert ls.top is None
+    assert ls.pop() is None
+    assert ls.pop() is None
+
+    proxy = ls()
+    ls.push([1, 2])
+    assert proxy == [1, 2]
+    ls.push((1, 2))
+    assert proxy == (1, 2)
+    ls.pop()
+    ls.pop()
+    assert repr(proxy) == '<LocalProxy unbound>'
+
+    release_local(ls)
+
+
+def test_local_proxies_with_callables():
+    """Use a callable with a local proxy"""
+    foo = 42
+    ls = LocalProxy(lambda: foo)
+    assert ls == 42
+    foo = [23]
+    ls.append(42)
+    assert ls == [23, 42]
+    assert foo == [23, 42]
